--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.38.0
-pandas==2.2.2
-openpyxl==3.1.5
-python-dotenv==1.0.1
-langchain-openai==0.2.2
-langchain-core==0.3.10
-langgraph==0.2.5
-langchain-community==0.3.2 
+streamlit
+pandas
+openpyxl
+python-dotenv
+langchain-openai
+langchain-core
+langgraph
+langchain-community
