--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ langchain-core==0.3.9
 langchain-community==0.3.1
 langgraph==0.2.25
 openai==1.51.0
-python-docx==1.1.2
 tiktoken==0.7.0
 
+# THIS IS THE CORRECT ONE — use this exact line
+docx==1.1.2
