--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-streamlit==1.39.0
-pandas==2.2.3
-openpyxl==3.1.5
-python-dotenv==1.0.1
-langchain==0.3.2
-langchain-openai==0.2.2
-langchain-core==0.3.9
-langchain-community==0.3.1
-langgraph==0.2.25
-openai==1.51.0
-tiktoken==0.7.0
-
-# THIS IS THE CORRECT ONE — use this exact line
-docx==1.1.2
+streamlit
+pandas
+openpyxl
+python-dotenv
+langchain
+langchain-openai
+langchain-core
+langchain-community
+langgraph
+openai
+docx
+tiktoken
