--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ streamlit
 pandas
 openpyxl
 python-dotenv
-langchain
-langchain-openai
-langchain-core
-langchain-community
-langgraph
+langchain==0.3.2
+langchain-openai==0.2.2
+langchain-core==0.3.9
+langchain-community==0.3.1
+langgraph==0.2.25
 openai
-docx
+docx==1.1.2
 tiktoken
