--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ streamlit
 pandas
 openpyxl
 python-dotenv
-langchain==0.3.2
-langchain-openai==0.2.2
-langchain-core==0.3.9
-langchain-community==0.3.1
-langgraph==0.2.25
+langchain
+langchain-openai
+langchain-core
+langchain-community
+langgraph<0.3
 openai
-docx==1.1.2
+docx
 tiktoken
+
